mission details page under progress

--- a/HTML/PSD to HTML/mission-page.html
+++ b/HTML/PSD to HTML/mission-page.html
@@ -254,7 +254,7 @@
                 </div>
                 <div class="mp-comments d-none">
                     <textarea id="comment" class="form-control" placeholder="Enter your comments..."></textarea>
-                    <a href="#" class="btn button d-flex gap-2 align-items-center mx-auto mt-3 width-max-conatent">
+                    <a href="#" class="btn button d-flex gap-2 align-items-center mx-auto mt-3 width-max-content">
                         Post comment
                     </a>
                     <div class="mp-comments-section bg-light p-3 rounded mt-3 overflow-auto d-grid row-gap-1">
